# detrospector

./: LICENSE  README  andreyevich.cabal  andreyevich.hs  detrospector.cabal  detrospector.hs  markov.hs
Detrospector/: Main.hs  Modes.hs  Types.hs
Detrospector/Modes/: Neolog.hs  Run.hs  Train.hs
